[package]
name = "tiramisu_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tensorflow = { version = "0.21.0", features = ["ndarray"] }
nifti = { version = "0.16.0", features = ["ndarray_volumes"] }
ndarray = { version = "0.15.6", default-features = false }
ndarray-stats = "0.5"
clap = "4.5.39"